<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.talkingheadapp.TalkingHead"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="56dp"
        android:text="@string/welcome"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inst"
        android:layout_alignRight="@+id/inst"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="39dp"
        android:text="@string/start" />

    <Button
        android:id="@+id/inst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/instruction" />

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/about"
        android:layout_alignRight="@+id/about"
        android:layout_below="@+id/about"
        android:layout_marginTop="22dp"
        android:text="@string/exit" />

    <Button
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inst"
        android:layout_alignRight="@+id/inst"
        android:layout_below="@+id/inst"
        android:layout_marginTop="23dp"
        android:text="@string/about" />

</RelativeLayout>